--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>easy-check</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content=" Shaikly - Verify your device IMEI and serial number instantly. Check iPhone, Samsung, and other devices for warranty, carrier lock, and more." />
+  <meta name="keywords"
+    content="IMEI check, serial number check, device verification, iPhone check, Samsung check, warranty check" />
+  <meta name="author" content="Shaikly" />
+  <meta name="theme-color" content="#454545" />
+
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content=" Shaikly - IMEI & Serial Verification" />
+  <meta property="og:description"
+    content="Verify your device IMEI and serial number instantly. Check warranty, carrier lock, and more." />
+
+  <title> Shaikly - IMEI & Serial Verification</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
